# rust-learn-projects

./: .gitignore  Cargo.toml  README.md  build.rs
access-refresh-token/: Cargo.toml
access-refresh-token/src/: main.rs
basic-tasks/: Cargo.toml
basic-tasks/src/: main.rs
basics/src/: basics.rs  drive.rs  enum.rs  impl.rs  loop.rs  main.rs  option.rs  ownership.rs  result.rs  std.rs  struct.rs  while.rs
basics/src/data-structures/: closures.rs  hashmap.rs  map-combinator.rs
books-api/: Cargo.toml
books-api/src/: main.rs
chatgpt/: .env  .gitignore  Cargo.toml
chatgpt/src/: main.rs
clipboard-manager/: clip-history.json  package-lock.json  package.json
clipboard-manager/src/: App.tsx
clipboard-manager/src-tauri/: Cargo.toml  tauri.conf.json
clipboard-manager/src-tauri/src/: lib.rs  main.rs
error-logger/: .gitignore  Cargo.toml
error-logger/src/: main.rs
file-compress-cli/: Cargo.toml  a.pptx
file-compress-cli/src/: main.rs
file-service/: Cargo.toml
file-service/src/: main.rs
git-automate/: Cargo.toml
git-automate/src/: main.rs
grpc-client/: Cargo.toml  build.rs
grpc-client/src/: main.rs
hp_error_logger/: Cargo.toml
hp_error_logger/src/: main.rs
hp_error_logger/src/config/: mod.rs
hp_error_logger/src/db/: mongo_db.rs
hp_error_logger/src/middlewares/: auth_middleware.rs
http-client/: Cargo.toml
http-client/src/: main.rs
http-client/src/Auth/: mod.rs
http-client/src/Exception/: log.rs  mod.rs
http-client/src/electronics/: mod.rs
http-client/src/mathematics/: mod.rs
http-client/src/services/: http_service.rs
mailer-api/: Cargo.toml
mailer-api/src/: main.rs
ml-project/: Cargo.toml
ml-project/src/: main.rs
mongodb-todo-api/: Cargo.toml  Dockerfile  docker-compose.yml
mongodb-todo-api/src/: main.rs
mongodb-todo-api/src/user_router/: mod.rs
mongodb-todo-api/src/user_service/: mod.rs
payment-grpc/: Cargo.toml  build.rs
payment-grpc/src/: server.rs
protos/: voting.proto
self-signed-ssl-rust/: Cargo.toml  debug-notes.md
self-signed-ssl-rust/src/: main.rs
simple-api/: Cargo.toml  Dockerfile
simple-api/src/: main.rs
src/: basics.rs  control_flow.rs  expression.rs  main.rs  mini_projects.rs  result.rs  string.rs  tuples.rs  vector.rs
src/basics/: my_derive.rs  my_enums.rs  my_expressions.rs  my_impl.rs  my_string.rs  my_tuple.rs  my_vector.rs  ownership.rs
src/data-structures/: hashmap.rs
src/mini_projects/: grpc_actix_web.rs
tcp-server/src/: main.rs
(+1 files in other folders)
