[package]
name = "access-refresh-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"

serde = { version="^1.0" }
serde_derive = "^1.0"
serde_json = "^1.0"

dotenv = "0.15.0"

jsonwebtoken = "8.2.0"