[package]
name = "hp_error_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.4.0"
chrono = "0.4.23" # Used for setting DateTimes
bson = "2.5.0"
dotenv = "0.15.0"
futures = "0.3.27"
serde = "1.0.155"
actix-web = "4.3.1"

