[package]
name = "http-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version="^1.0" }
serde_derive = "^1.0"
serde_json = "^1.0"
dotenv = "0.15.0"
jsonwebtoken = "9.0.0"
chrono = "0.4.23"