[package]
name = "payment-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payments-client"
path = "src/client.rs"



[dependencies]
prost = "0.12.1"
tokio = {version ="1.32.0",features = ["macros", "rt-multi-thread"]}
tonic = "0.10.1"



[build-dependencies]
tonic-build = "0.10.1"




